change "view replies" toggle from a p tag to a button to fix bug on mobile devices.

--- a/src/main/resources/static/stylesheet/main.css
+++ b/src/main/resources/static/stylesheet/main.css
@@ -330,15 +330,30 @@ textarea{
 }
 
 a:link    {
-    /* Applies to all unvisited links */
     text-decoration:  none;
 }
+
 a:visited {
-    /* Applies to all visited links */
     text-decoration:  none;
 }
+
 a:hover   {
-    /* Applies to links under the pointer */
+    text-decoration:  none;
+}
+
+.btn-link:link{
+    text-decoration:  none;
+}
+
+.btn-link:hover{
+    text-decoration:  none;
+}
+
+button.btn-link {
+    text-decoration:  none;
+}
+
+button.btn-link:visited   {
     text-decoration:  none;
 }
 
